--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Start.Start
-EditorStartupMap=/Game/Start.Start
+GameDefaultMap=/Game/Snake/Levels/MainLevel.MainLevel
+EditorStartupMap=/Game/Snake/Levels/MainLevel.MainLevel
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
