--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -2,3 +2,5 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=AC4D11A5468823F7D32CB69492B3DC0A
+CopyrightNotice=CppSnake. Copyright SarkOZ1. All Right Reserved.
+
